# FTL

./: .gitignore  README.md  index.html  main.py  package.json  requirements.txt  run.sh  setup.mjs  start.mjs  vite.config.ts
.aone_copilot/plans/font-subset-tool/: implementation_plan.md  task.md
.zcode/plans/: plan-sess_7542f6a5-2f55-4de1-806f-9b87e34b128a.md
ftl-tauri/: .gitignore  README.md  package.json  pnpm-lock.yaml  tsconfig.json
ftl-tauri/sidecar/: requirements.txt
ftl-tauri/sidecar/font/: converter.py
ftl-tauri/sidecar/utils/: charset_presets.py  file_utils.py
ftl-tauri/src/: App.vue
ftl-tauri/src-tauri/: tauri.conf.json
ftl-tauri/src-tauri/capabilities/: default.json
ftl-tauri/src-tauri/icons/: icon.icns
ftl-tauri/src-tauri/src/: lib.rs
ftl-tauri/src/components/: AdvancedDialog.vue  CharsetInput.vue  FileDropZone.vue
ftl-tauri/src/composables/: useClipboard.ts  useFileDrop.ts  useSidecar.ts
ftl-tauri/src/data/: charsetPresets.ts
ftl-tauri/src/styles/: global.css
ftl-tauri/src/views/: Home.vue
sidecar/: ftl_worker.py
sidecar/font/: subsetter.py
src/: main.ts
src-tauri/: Cargo.toml
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: FormatOptions.vue  ProcessingDialog.vue
src/stores/: fontStore.ts
src/types/: messages.ts
src/views/: Home.vue
ui/: advanced_dialog.py  advanced_options.py  charset_input.py  file_picker.py  format_options.py  glass_panel.py  main_view.py  processing_dialog.py  progress_log.py  theme.py  widgets.py
utils/: async_worker.py
